[project]
name = "washOTP"
version = "1.1.6"
description = "Basic OTP generator"
authors = [
    { name = "Len Washington III" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11.9"
dependencies = ["colors @ git+https://github.com/lwashington3/colors@1.2.1", "qrcode[pil]"]

[project.urls]
Source = "https://github.com/lwashington3/washOTP"
Issues = "https://github.com/lwashington3/washOTP/issues"

[build-system]
requires = ["setuptools>=61.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["washOTP"]
include-package-data = true
